1.10: Handle captcha requests from Jira (prompt user to solve captcha on login page) Fix `Thread context was already set...`